
14. LUCENE-650: Fixed NPE in Locale specific String Sort when Document
    has no value.
    (Oliver Hutchison via Chris Hostetter)

15. LUCENE-683: Fixed data corruption when reading lazy loaded fields.
    (Yonik Seeley)

16. LUCENE-678: Fixed bug in NativeFSLockFactory which caused the same
    lock to be shared between different directories.
    (Michael McCandless via Yonik Seeley)

Optimizations

  1. LUCENE-586: TermDocs.skipTo() is now more efficient for multi-segment
     indexes.  This will improve the performance of many types of queries
     against a non-optimized index. (Andrew Hudson via Yonik Seeley)

  2. LUCENE-623: RAMDirectory.close now nulls out its reference to all
     internal "files", allowing them to be GCed even if references to the
     RAMDirectory itself still exist. (Nadav Har'El via Chris Hostetter)

  3. LUCENE-629: Compressed fields are no longer uncompressed and recompressed
     during segment merges (e.g. during indexing or optimizing), thus improving
     performance . (Michael Busch via Otis Gospodnetic)

  4. LUCENE-388: Improve indexing performance when maxBufferedDocs is large by
     keeping a count of buffered documents rather than counting after each
     document addition.  (Doron Cohen, Paul Smith, Yonik Seeley)

  5. Modified TermScorer.explain to use TermDocs.skipTo() instead of looping through docs. (Grant Ingersoll)

  6. LUCENE-672: New indexing segment merge policy flushes all buffered docs
     to their own segment and delays a merge until mergeFactor segments of a
     certain level have been accumulated.  This increases indexing performance
     in the presence of deleted docs or partially full segments as well as
     enabling future optimizations. (Ning Li, Yonik Seeley)

  7. Lazy loaded fields unnecessarily retained an extra copy of loaded
     String data.  (Yonik Seeley)

  8. LUCENE-443: ConjunctionScorer performance increase.  Speed up
     any BooleanQuery with more than one mandatory clause.